GEODE-10128: Open/export packages for JDK 17 (#7451)
PROBLEM

JDK 17 throws exceptions when product and test code attempts to access
elements in modules that do not make those elements accessible.

SOLUTION

Open and export the required packages when starting a test JVM.